# TypelessData

./: Cargo.toml
src/: array.rs  boxed.rs  const_ops.rs  idx.rs  lib.rs  slice.rs
src/doc/: write.md  write_unchecked.md
src/tests/: mod.rs
