[package]
name = "typeless-data"
version = "0.2.0"

[dependencies]
serde = { version = "*", optional = true, features = ["serde_derive"]}

[features]
default = ["alloc"]

alloc = []

full_nightly = ["allocator_api", "new_range_api", "ptr_metadata", "generic_const_exprs"]
ptr_metadata = []
allocator_api = ["alloc"]
new_range_api = []
generic_const_exprs = []

serde = ["dep:serde"]
